durga@48demo.com.bleadtest/src/objects/Reports__c.object
<CustomObject>
    <fields>
        <fullName>RE_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RE_Name__c</fullName>
        <label>Name</label>
        <length>253</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPE_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Profile Event</label>
        <referenceTo>User_Profile_Event__c</referenceTo>
        <relationshipLabel>Reports</relationshipLabel>
        <relationshipName>Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reports</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RE_Name__c</columns>
        <columns>UPE_id__c</columns>
        <columns>RE_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RE_{00000000}</displayFormat>
        <label>RE_Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>